# MakeInstall

./: README.md
Src/: main.cpp
proj/cmake/: CMakeLists.txt  make_proj.bat
